sip4 (4.19.12+dfsg-1) UNRELEASED; urgency=medium

  * Exclude sipgen/lexer.c and sipgen/parser.{c,h} from the tarball.
  * New upstream release.
    - Fixes segfault when -n option is not specified (closes: #903263).
  * Drop header_install.diff, applied upstream.
  * Bump API version to 12.5.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 08 Jul 2018 17:03:16 +0300

sip4 (4.19.11+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Remove ancient X-Python-Version field
  * d/control: Remove ancient X-Python3-Version field

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update debian/copyright.
  * Make python-sip depend on python-enum34.
  * Document the new -n option in sip.1 manpage.
  * Fix installation of siplib/sip.h.
  * Simplify installation code in debian/rules.
  * Bump Standards-Version to 4.1.4, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 03 Jul 2018 22:24:52 +0300

sip4 (4.19.8+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org

  [ Dmitry Shachnev ]
  * New upstream bugfix release.
  * Bump API version to 12.4.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 10 Mar 2018 09:56:30 +0300

sip4 (4.19.7+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Bump years in debian/copyright.
  * Bump Standards-Version to 4.1.3, no changes needed.
  * Specify empty DH_OPTIONS when using dh_installdocs with -p argument.
  * Add ${python[3]:Depends} to dependencies of python[3]-sip-dbg.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 25 Jan 2018 12:41:02 +0300

sip4 (4.19.6+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 25 Nov 2017 14:31:06 +0300

sip4 (4.19.5+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Bump API version to 12.3.
  * Update debhelper compat level to 10.
  * Bump Standards-Version to 4.1.1, no changes needed.